force-app/main/default/objects/Batch_Monitoring_info__mdt/Batch_Monitoring_info__mdt.object-meta.xml
<CustomObject>
    <label>Batch Monitoring info</label>
    <pluralLabel>Batch Monitoring infos</pluralLabel>
</CustomObject>