force-app/main/default/objects/Batch_Monitoring_info__mdt/fields/DurationDate__c.field-meta.xml
<CustomField>
    <fullName>DurationDate__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Date to start get batch from Today-DurationDate</description>
    <label>DurationDate</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>