force-app/main/default/objects/Batch_Monitoring_info__mdt/fields/Email_list__c.field-meta.xml
<CustomField>
    <fullName>Email_list__c</fullName>
    <label>Email list</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>