force-app/main/default/objects/Batch_Monitoring_info__mdt/fields/Request_Field__c.field-meta.xml
<CustomField>
    <fullName>Request_Field__c</fullName>
    <label>Request Field</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>